syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/god-jay/gools/_examples/discovery/my-micro-service/pb";

service ApiUserService {
  //登录接口
  rpc GetUser (ApiUserRequest) returns (ApiUserResponse) {
    option (google.api.http) = {
      post: "/user",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "获取用户信息"
    };
  }
}

message ApiUserRequest {
  int32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "用户ID"
  }];
}
message ApiUserResponse {
  string jwt_token = 1;
  string name = 2;
  int32 age = 3;
  string sex = 4;
}
